# vectkit

./: CHANGELOG.md  CMakeLists.txt  Makefile  NAME  PROJECT  compile_commands.json  xmake.lua
examples/: crs_conversion_example.cpp  main.cpp  rerun_vis_from_enu.cpp  rerun_vis_from_wgs.cpp
include/geoget/: geoget.hpp
include/geoson/: geoson.hpp  parser.hpp  types.hpp  vector.hpp  writter.hpp
include/vectkit/: parser.hpp  types.hpp  vectkit.hpp  vector.hpp  writter.hpp
misc/: field4.geojson
src/: geoget.cpp  geoson.cpp  parser.cpp  vector.cpp  writter.cpp
test/: test_crs_conversion.cpp  test_error_handling.cpp  test_integration.cpp  test_parser.cpp  test_types.cpp  test_vector.cpp  test_writer.cpp
